# cli-maze

./: .gitignore  Cargo.toml  README.md
maps/: easy.txt
menu/: Cargo.toml
menu/src/: lib.rs
src/: .#bloc.rs  bloc.rs  error.rs  lib.rs  main.rs  player.rs  utils.rs
src/error/: errlist.rs  mod.rs  utils.rs
src/game/: main_menu.rs  mod.rs  mode.rs
src/game/handler/: add_map.rs  del_map.rs  exit.rs  mod.rs  play.rs  ren_map.rs  utils.rs
src/map/: bloc.rs  mod.rs  player.rs  state.rs  utils.rs
