[package]
name = "cli-maze"
version = "0.1.0"
authors = ["Ahmad <ahmad.baa003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
rand = "0.7.3"
crossterm = "0.17.5"